fix: remove comments
